Add SectionInfo model and ProductController API
Introduced a new `SectionInfo` class for section details with JSON serialization attributes. Created `ProductController` with a `Get` method to return a list of `SectionInfo` objects. Added necessary using directives for ASP.NET Core MVC and JSON serialization.

--- a/WebApplication1/appsettings.Development.json
+++ b/WebApplication1/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
   "Logging": {
+
+    "ConnectionStrings": {
+      "DefaultConnection": "Data Source=Produto.db"
+    },
+
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
