--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,5 +1,10 @@
 {
   "Logging": {
+
+    "ConnectionStrings": {
+      "DefaultConnection": "Data Source=Produto.db"
+    },
+
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
